--- a/src/components/combo-box/suggestion-combo-box.html
+++ b/src/components/combo-box/suggestion-combo-box.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../../../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../../bower_components/neon-animation/neon-animation-runner-behavior.html">
 
 <dom-module id="suggestion-combo-box">
 
